--- a/musicsite/polls/templates/polls/index.html
+++ b/musicsite/polls/templates/polls/index.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"> 
+
 <h1>Polls app</h1>
 
 <h2>{{ name }}</h2>
