--- a/JamJelly/search/templates/search/home.html
+++ b/JamJelly/search/templates/search/home.html
@@ -1,23 +1,38 @@
-
 <html>
 <head>
 <title>Spotify Search | Home</title>
 </head>
-
 <body>
 <div id="title"><b>Welcome to a custom Spotify Search!</b></div>
-
 <div>
 Welcome to the home page
 </div>
-
 <div>
-{{ user.profile.client_id }}
+    <table>
+        <tr><td>Username:</td> <td> {{ user.username }}</td></tr>
+        <tr><td>Client ID</td> <td> {{ user.profile.client_id }}</td></tr>
+        <tr><td>Client Secret</td> <td> {{ user.profile.client_secret }}</td></tr>
+    </table>
+    <hr/>
+    <h3>Perform search</h3>
+    <form action="do_search/" method="POST">
+        {% csrf_token %}
+        <table>
+            <tr>
+                <td>Artist:</td><td><input type="text" name="artist" /></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="Search" /></td> <td></td>
+            </tr>
+            <input type="hidden" value="{{ user.profile.client_id }}" name="client_id" />
+            <input type="hidden" value="{{ user.profile.client_secret }}" name="client_secret" />
+        </table>
+    </form>
+
 </div>
 
 <div>
 <a href="#">logout</a>
 </div>
-
 </body>
 </html>
