new tab on link

--- a/JamJelly/search/templates/search/newuser.html
+++ b/JamJelly/search/templates/search/newuser.html
@@ -32,7 +32,7 @@ a {
     <ol>
         <li> Create a Spotify Account.</li>
 
-     <li> Go to your <a href="https://developer.spotify.com/dashboard/">Spotify Developer Dashboard</a></li>
+     <li> Go to your <a href="https://developer.spotify.com/dashboard/" target="_blank">Spotify Developer Dashboard</a></li>
 
      <li> Login</li>
 
