--- a/JamJelly/search/templates/search/do_search.html
+++ b/JamJelly/search/templates/search/do_search.html
@@ -22,7 +22,7 @@
 
 			<tr>
 				<td>Artist Image</td>
-				<td>{{r_image}}</td>
+				<td><img src={{r_image}} alt="Artist Image Alt Txt" style="height:100px;"></td>
 			</tr>
 
 			<tr>
