integrated into home html

--- a/JamJelly/search/templates/search/do_search.html
+++ b/JamJelly/search/templates/search/do_search.html
@@ -47,6 +47,32 @@
 
 		</table>
 
+		<br>
+
+		Artists You May Enjoy:
+
+		<br>
+
+		<table>
+
+			<tr>
+				<th>Name</th>
+				<th>URL</th>
+			</tr>
+
+			<tr>
+				<td>Name 1</td>
+				<td>URL 1</td>
+			</tr>
+
+			<tr>
+				<td>Name 2</td>
+				<td>URL 2</td>
+			</tr>
+
+		</table>
+
+
 
 </center>
 </body>
