--- a/JamJelly/search/templates/search/home.html
+++ b/JamJelly/search/templates/search/home.html
@@ -34,5 +34,82 @@ Welcome to the home page
 <div>
 <a href="/">Logout</a>
 </div>
+
+
+<div>
+
+<br>
+<br>
+
+  Output Results Below:
+
+<br>
+
+<table>
+
+  <tr>
+    <th>Key</th>
+    <th>Value</th>
+  </tr>
+
+  <tr>
+    <td>Artist Name</td>
+    <td>{{r_name}}</td>
+  </tr>
+
+  <tr>
+    <td>Artist Image</td>
+    <td><img src={{r_image}} alt="Artist Image Alt Txt" style="height:100px;"></td>
+  </tr>
+
+  <tr>
+    <td>Artist Genres</td>
+    <td>{{r_genre}}</td>
+  </tr>
+
+  <tr>
+    <td>Artist Followers</td>
+    <td>{{r_follow}}</td>
+  </tr>
+
+  <tr>
+    <td>Artist Popularity</td>
+    <td>{{r_pop}}</td>
+  </tr>
+
+  <tr>
+    <td>Spotify URL</td>
+    <td>{{r_url}}</td>
+  </tr>
+
+</table>
+
+<br>
+
+Artists You May Enjoy:
+
+<br>
+
+<table>
+
+  <tr>
+    <th>Name</th>
+    <th>URL</th>
+  </tr>
+
+  <tr>
+    <td>Name 1</td>
+    <td>URL 1</td>
+  </tr>
+
+  <tr>
+    <td>Name 2</td>
+    <td>URL 2</td>
+  </tr>
+
+</table>
+
+</div>
+
 </body>
 </html>
