--- a/JamJelly/search/templates/search/do_search.html
+++ b/JamJelly/search/templates/search/do_search.html
@@ -42,7 +42,7 @@
 
 			<tr>
 				<td>Spotify URL</td>
-				<td>{{r_url}}</td>
+				<td><a href="{{r_url}}">{{r_url}}</a></td>
 			</tr>
 
 		</table>
