--- a/JamJelly/search/templates/search/home.html
+++ b/JamJelly/search/templates/search/home.html
@@ -32,7 +32,7 @@ Welcome to the home page
 </div>
 
 <div>
-<a href="/">Logout</a>
+<a href="/logout">Logout</a>
 </div>
 
 {% if method == "POST" %}
