--- a/JamJelly/static/styles.css
+++ b/JamJelly/static/styles.css
@@ -99,10 +99,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-
-
 #container_main{
   width: 600px;
   height: 500px;
@@ -115,4 +111,17 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+#viz{
+  margin: 20px;
+  width: 550px;
+  height: 350px;
+  font-size: 18pt;
+  text-align: center;
+  line-height: 50px;
+  background-color: grey;
+  color: white;
+  right: 50%;
+  left: 50%;
 }
