--- a/JamJelly/static/styles.css
+++ b/JamJelly/static/styles.css
@@ -2,7 +2,6 @@
   overflow: hidden;
   background-color: #333;
 }
-
 .navbar a {
   float: left;
   display: block;
@@ -12,12 +11,13 @@
   padding: 14px 16px;
   text-decoration: none;
 }
-
+a {
+  float: center;
+}
 .navbar .dropdown {
   float: right;
   overflow: hidden;
 }
-
 .navbar .dropdown .dropbtn {
   font-size: 16px;
   border: none;
@@ -28,16 +28,13 @@
   font-family: inherit;
   margin: 0;
 }
-
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #4e136b;
 }
-
 .navbar .container-search {
   float: left;
   margin-left: 25%;
 }
-
 .navbar .container-search button {
   float: center;
   padding: 6px 10px;
@@ -48,18 +45,15 @@
   border: none;
   cursor: pointer;
 }
-
 .navbar .container-search button:hover {
   background: #ccc;
 }
-
 .navbar input[type=text] {
   padding: 6px;
   margin-top: 8px;
   font-size: 17px;
   border: none;
 }
-
 .navbar .dropdown-content {
   display: none;
   position: absolute;
@@ -69,7 +63,6 @@
   z-index: 1;
   right: 0;
 }
-
 .navbar .dropdown-content a {
   float: none;
   color: black;
@@ -78,25 +71,15 @@
   display: block;
   text-align: left;
 }
-
 .navbar .dropdown-content a:hover {
   background-color: #ddd;
 }
-
 .navbar .dropdown:hover .dropdown-content {
   display: block;
 }
 
-
-/* Main content */
 .main {
   margin-top: 30px; /* Add a top margin to avoid content overlay */
-}
-
-
-body {
-  background-color: LightGray;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 #container_main{
@@ -124,4 +107,108 @@ body {
   color: white;
   right: 50%;
   left: 50%;
+}
+
+/* ------------------------------------------------------------------------- */
+/* -------- LOGIN CSS - https://freefrontend.com/css-login-forms/ ---------- */
+/* ------------------------------------------------------------------------- */
+
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
+  font-weight:  300;
+  margin:  0;
+}
+$primary: rgb(182,157,230);
+html, body {
+  height:  100vh;
+  width:  100vw;
+  margin:  0 0;
+  display:  flex;
+  align-items:  flex-start;
+  justify-content:  flex-start;
+  background-color:  LightGray;
+}
+h4 {
+  font-size:  24px;
+  font-weight:  600;
+  color:  #000;
+  opacity:  .85;
+}
+label {
+  font-size:  12.5px;
+  color:  #000;
+  opacity:  .8;
+  font-weight:  400;
+}
+
+a.discrete {
+    color:  rgba(#000, .4);
+    font-size:  14px;
+    border-bottom:  solid 1px rgba(#000, .0);
+    padding-bottom:  4px;
+    margin-left:  auto;
+    font-weight:  300;
+    transition:  all .3s ease;
+    margin-top:  40px;
+    &:hover {
+      border-bottom:  solid 1px rgba(#000, .2);
+    }
+  }
+
+.floating-label {
+  position:  relative;
+  margin-bottom:  10px;
+  width:  100%;
+  label {
+    position:  absolute;
+    top: calc(50% - 7px);
+    left:  0;
+    opacity:  0;
+    transition:  all .3s ease;
+    padding-left:  44px;
+  }
+}
+
+$displacement:  3px;
+@keyframes shake-shake {
+  0% { transform: translateX(-$displacement);}
+  20% { transform: translateX($displacement); }
+  40% { transform: translateX(-$displacement);}
+  60% { transform: translateX($displacement);}
+  80% { transform: translateX(-$displacement);}
+  100% { transform: translateX(0px);}
+}
+.session {
+  display:  flex;
+  flex-direction:  row;
+  width:  50%;
+  height:  50%;
+  margin-left:  25%;
+  margin-right:  25%;
+  margin-top:  25%;
+  margin-bottom:  25%;
+  background:  #ffffff;
+  border-radius:  4px;
+  box-shadow:  0px 2px 6px -1px rgba(0,0,0,.12);
+}
+.left {
+  width:  220px;
+  height:  auto;
+  min-height:  100%;
+  position:  relative;
+  background-image: url("https://i.pinimg.com/originals/2e/1c/d4/2e1cd450b43da5e99ab8b4a2430c3ead.jpg");
+  background-size:  cover;
+  border-top-left-radius:  4px;
+  border-bottom-left-radius:  4px;
+  svg {
+    height:  40px;
+    width:  auto;
+    margin:  20px;
+  }
+
+}
+
+img {
+  -webkit-filter: drop-shadow(5px 5px 5px #000);
+filter: drop-shadow(5px 5px 5px #000);
 }
