Shelby adding radar plot

--- a/JamJelly/search/templates/search/home.html
+++ b/JamJelly/search/templates/search/home.html
@@ -76,8 +76,12 @@
 
 </table>
 
-  <div id = "viz">
-    Visualization
+  <div>
+
+  {% autoescape off %}
+  {{ plot_div }}
+  {% endautoescape %}
+
   </div>
 
 </div>
