--- a/JamJelly/search/templates/search/index.html
+++ b/JamJelly/search/templates/search/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <!-- {% load static %} -->
-  <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
+  <link rel="stylesheet" href="{% static 'styles.css' %}" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+  </style>
   <title>Spotify Search Login</title>
 </head>
 
