--- a/JamJelly/static/styles.css
+++ b/JamJelly/static/styles.css
@@ -1,59 +1,69 @@
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #686868;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
+
 .navbar a {
-  float: left;
-  display: block;
-  text-align: center;
+  text-align: left;
   font-size: 16px;
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
+  color: purple;
+  font-family: 'Pacifico', cursive !important;
+  padding-left: 10px;
+  padding-right: 0px;
+
 }
-a {
-  float: center;
+
+#home_name {
+  height: 0px;
+  padding-left: 10px;
+  padding-right: 0px;
 }
+
 .navbar .dropdown {
   float: right;
   overflow: hidden;
 }
+
 .navbar .dropdown .dropbtn {
   font-size: 16px;
   border: none;
   outline: none;
-  color: white;
-  padding: 14px 16px;
+  color: purple;
   background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+  font-family: 'Pacifico', cursive !important;
+
 }
+
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #4e136b;
 }
+
 .navbar .container-search {
-  float: left;
-  margin-left: 25%;
+  text-align: center;
+  padding-left: 0px;
+  padding-right: 0px;
+  height: 0px;
 }
+
 .navbar .container-search button {
-  float: center;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
+  text-align: center;
   background: #ddd;
   font-size: 17px;
-  border: none;
   cursor: pointer;
 }
+
 .navbar .container-search button:hover {
   background: #ccc;
 }
+
 .navbar input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
+
   font-size: 17px;
   border: none;
 }
+
 .navbar .dropdown-content {
   display: none;
   position: absolute;
@@ -63,6 +73,7 @@ a {
   z-index: 1;
   right: 0;
 }
+
 .navbar .dropdown-content a {
   float: none;
   color: black;
@@ -71,9 +82,11 @@ a {
   display: block;
   text-align: left;
 }
+
 .navbar .dropdown-content a:hover {
   background-color: #ddd;
 }
+
 .navbar .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -96,18 +109,6 @@ a {
   transform: translate(-50%, -50%);
 }
 
-#viz{
-  margin: 20px;
-  width: 550px;
-  height: 350px;
-  font-size: 18pt;
-  text-align: center;
-  line-height: 50px;
-  background-color: grey;
-  color: white;
-  right: 50%;
-  left: 50%;
-}
 
 /* ------------------------------------------------------------------------- */
 /* -------- LOGIN CSS - https://freefrontend.com/css-login-forms/ ---------- */
@@ -118,7 +119,9 @@ a {
   font-weight:  300;
   margin:  0;
 }
+
 $primary: rgb(182,157,230);
+
 html, body {
   height:  100vh;
   width:  100vw;
@@ -126,14 +129,16 @@ html, body {
   display:  flex;
   align-items:  flex-start;
   justify-content:  flex-start;
-  background-color:  LightGray;
+  background-color:  #686868;
 }
+
 h4 {
   font-size:  24px;
   font-weight:  600;
   color:  #000;
   opacity:  .85;
 }
+
 label {
   font-size:  12.5px;
   color:  #000;
@@ -153,7 +158,7 @@ a.discrete {
     &:hover {
       border-bottom:  solid 1px rgba(#000, .2);
     }
-  }
+}
 
 .floating-label {
   position:  relative;
@@ -178,6 +183,7 @@ $displacement:  3px;
   80% { transform: translateX(-$displacement);}
   100% { transform: translateX(0px);}
 }
+
 .session {
   display:  flex;
   flex-direction:  row;
@@ -191,12 +197,13 @@ $displacement:  3px;
   border-radius:  4px;
   box-shadow:  0px 2px 6px -1px rgba(0,0,0,.12);
 }
+
 .left {
   width:  220px;
   height:  auto;
   min-height:  100%;
   position:  relative;
-  background-image: url("https://i.pinimg.com/originals/2e/1c/d4/2e1cd450b43da5e99ab8b4a2430c3ead.jpg");
+  /*background-image: url("https://i.pinimg.com/originals/2e/1c/d4/2e1cd450b43da5e99ab8b4a2430c3ead.jpg");*/
   background-size:  cover;
   border-top-left-radius:  4px;
   border-bottom-left-radius:  4px;
