--- a/JamJelly2/static/styles.css
+++ b/JamJelly2/static/styles.css
@@ -49,7 +49,7 @@
 
 .navbar .container-search button {
   text-align: center;
-  background: #ddd;
+  background: #686868;
   font-size: 17px;
   cursor: pointer;
 }
@@ -120,16 +120,16 @@
   margin:  0;
 }
 
-$primary: rgb(182,157,230);
+/* $primary: rgb(182,157,230); */
 
 html, body {
-  height:  100vh;
+  /* height:  100vh;
   width:  100vw;
   margin:  0 0;
   display:  flex;
   align-items:  flex-start;
-  justify-content:  flex-start;
-  background-color:  #686868;
+  justify-content:  flex-start; */
+  background-color:  #dddae0;
 }
 
 h4 {
@@ -187,12 +187,26 @@ $displacement:  3px;
 .session {
   display:  flex;
   flex-direction:  row;
-  width:  50%;
-  height:  50%;
+  width:  600px;
+  height:  400px;
   margin-left:  25%;
   margin-right:  25%;
-  margin-top:  25%;
+  margin-top:  10%;
   margin-bottom:  25%;
+  background:  #ffffff;
+  border-radius:  4px;
+  box-shadow:  0px 2px 6px -1px rgba(0,0,0,.12);
+}
+
+.session_register {
+  display:  flex;
+  flex-direction:  row;
+  width:  750px;
+  height:  500px;
+  margin-left:  25%;
+  margin-right:  25%;
+  margin-top:  10%;
+  /* margin-bottom:  25%; */
   background:  #ffffff;
   border-radius:  4px;
   box-shadow:  0px 2px 6px -1px rgba(0,0,0,.12);
@@ -203,7 +217,7 @@ $displacement:  3px;
   height:  auto;
   min-height:  100%;
   position:  relative;
-  /*background-image: url("https://i.pinimg.com/originals/2e/1c/d4/2e1cd450b43da5e99ab8b4a2430c3ead.jpg");*/
+  background-image: url("../static/images/jjbanner.png");
   background-size:  cover;
   border-top-left-radius:  4px;
   border-bottom-left-radius:  4px;
