--- a/JamJelly2/static/styles.css
+++ b/JamJelly2/static/styles.css
@@ -58,6 +58,14 @@
   background: #ccc;
 }
 
+/* #bySong {
+  display = "none";
+}
+
+#byArtist{
+  display = "none";
+} */
+
 .navbar input[type=text] {
 
   font-size: 17px;
@@ -122,7 +130,7 @@
 
 /* $primary: rgb(182,157,230); */
 
-html, body {
+html {
   /* height:  100vh;
   width:  100vw;
   margin:  0 0;
@@ -232,4 +240,67 @@ $displacement:  3px;
 img {
   -webkit-filter: drop-shadow(5px 5px 5px #000);
 filter: drop-shadow(5px 5px 5px #000);
+}
+
+.toggle-text {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  display: inline-block;
+  /* width: 100px; */
+  float: left;
+  padding-left: 20%;
+}
+
+.toggle {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  display: inline-block;
+  /* width: 100px; */
+  float: left;
+  padding-left: 35%;
+}
+.toggle input {
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -9999px;
+}
+.toggle input + label {
+  margin: 0;
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  border: solid 1px #ddd;
+  background-color: #fff;
+  text-align: center;
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+  transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
+}
+.toggle input + label:first-of-type {
+  border-radius: 6px 0 0 6px;
+  border-right: none;
+}
+.toggle input + label:last-of-type {
+  border-radius: 0 6px 6px 0;
+  border-left: none;
+}
+.toggle input:hover + label {
+  border-color: #213140;
+}
+.toggle input:checked + label {
+  background-color: #4b9dea;
+  color: #fff;
+  box-shadow: 0 0 10px rgba(102, 179, 251, .5);
+  border-color: #4b9dea;
+  z-index: 1;
+}
+.toggle input:focus + label {
+  outline: dotted 1px #ccc;
+  outline-offset: 0.45rem;
 }
