--- a/JamJelly2/search/templates/search/home.html
+++ b/JamJelly2/search/templates/search/home.html
@@ -14,6 +14,11 @@
     <a href="home">Jam Jelly</a>
   </div>
 
+  <!-- <script>
+  alert("cid: {{ user.profile.client_id }}");
+  alert("secret: {{ user.profile.client_secret }}");
+  </script> -->
+
   {% if error %}
     <script>
     alert("Error: Search Cannot Be Empty");
